<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Stepper" Id="{70f60fc6-e7cd-4d28-b5de-2b239a406e43}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Stepper EXTENDS FB_StateMachine  IMPLEMENTS I_StateMachine
VAR_INPUT
	bStartHoming : BOOL;

END_VAR
VAR
	eInnerState : E_StepperStates;
	fbHoming	: FB_StepperHoming;
	stAxis		: ST_StepperAxis;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[OuterLopSM();]]></ST>
    </Implementation>
    <Folder Name="Properties" Id="{8978cbc0-270d-489b-90d2-49bd092d7602}" />
    <Property Name="Angle" Id="{6a7eed59-1def-45bb-a1f6-b22de50f0d77}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Angle : LREAL]]></Declaration>
      <Get Name="Get" Id="{41816775-b8e3-4ead-85bb-3a0203449ba0}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Angle := stAxis.stAxisRef.NcToPlc.ActPos;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Disable" Id="{cd457282-6054-4be8-8fe6-e00d6a2d0dfc}">
      <Declaration><![CDATA[METHOD Disable : BOOL

VAR
	bChildBusy  : BOOL := FALSE;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbHoming(bActive:=FALSE);



IF fbHoming.Busy THEN
	bChildBusy := TRUE;
ELSIF fbHoming.bError THEN
	bChildBusy := TRUE;
	{warning 'TODO: trigger e-stop'}
	//	Stack trace and bError switching are reserved for inner loop
	fbHoming.ErrorAck:=TRUE;
END_IF



IF bChildBusy THEN
	Disable := FALSE;
ELSE
	Disable := TRUE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Property Name="ForceHoming" Id="{e90b8952-b364-4724-9c87-aa02d65a0d4b}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY ForceHoming : BOOL]]></Declaration>
      <Get Name="Get" Id="{b143f5c3-52bd-42fa-b7f9-c7a0b9e5053e}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[ForceHoming := stAxis.bForceHoming;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{53bca0f8-9de6-44d8-8acb-7f475a3caf04}">
        <Declaration><![CDATA[]]></Declaration>
        <Implementation>
          <ST><![CDATA[stAxis.bForceHoming := ForceHoming;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="Homed" Id="{2c688af8-592a-467f-b482-d9ba991c7c22}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Homed : BOOL]]></Declaration>
      <Get Name="Get" Id="{230bc8aa-0217-406b-a7e6-0232193e7d7a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[IF bActive THEN
	Homed := NOT fbHoming.HomingNeeded;
ELSE
	Homed :=  TRUE;;
END_IF ]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="InnerLoopSM" Id="{ee4afb9f-5861-4e61-a530-082a879b7012}">
      <Declaration><![CDATA[METHOD InnerLoopSM : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// update all children FBs
fbHoming();

CASE CyclicInnerCase(TO_STRING(eInnerState)) OF
	E_StepperStates.Idle:
		IF bStartHoming THEN
			bStartHoming := FALSE;
			ChangeInnerState(E_StepperStates.Homing1);
		END_IF

	E_StepperStates.Homing1:
		IF fbHoming.Busy THEN
			// fbHoming should never be busy here 	
			sErrorDetails := 'fbHoming.Busy = TRUE';
			fbEventHandler(eNapID:=E_Event.UNABLE_TO_START_TASK,sMessage:=sErrorDetails);
			bError := TRUE;	
		ELSE
			IF fbHoming.bError THEN
				sErrorDetails := 'fbHoming.bReady=FALSE';
				fbEventHandler(eNapID:=E_Event.UNABLE_TO_START_TASK,sMessage:=sErrorDetails);
				bError := TRUE;
			ELSE
				fbHoming.bStart:=TRUE;
				ChangeInnerState(E_StepperStates.Homing2);
			END_IF
		END_IF
		
		
	E_StepperStates.Homing2:
		IF fbHoming.Busy THEN
			// Wait... fbStepper still busy 			
		ELSE
			IF fbHoming.bError THEN
				fbEventHandler(eNapID:=E_Event.TASK_FAILED,sTrace:=fbHoming.EventTrace);
				fbHoming.ErrorAck:=TRUE;
				bError := TRUE;
			ELSE
				IF Homed THEN
					fbEventHandler(eNapID:=E_Event.REQUEST_COMPLETED);
					ChangeInnerState(E_StepperStates.Idle);
				ELSE
					sErrorDetails := 'Homed=FALSE';
					fbEventHandler(eNapID:=E_Event.TASK_FAILED,sMessage:=sErrorDetails);
					bError := TRUE;
				END_IF
			END_IF
		END_IF
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ReadStatus" Id="{43ddb076-e090-43b0-b179-31afad3c41f5}">
      <Declaration><![CDATA[METHOD PUBLIC ReadStatus : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[stAxis.stAxisRef.ReadStatus();
{warning 'TODO: Add additional checks to FB_Steepper.ReadStatus()'}]]></ST>
      </Implementation>
    </Method>
    <Method Name="Reset" Id="{d54bc836-7075-4a56-8e55-ca9951410268}">
      <Declaration><![CDATA[METHOD Reset : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// reset variables specific to this FB 

// Reactivate children FBs
fbHoming.Active:=TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Setup" Id="{5802140c-bf45-4cf3-9f73-9432ea27d7bb}">
      <Declaration><![CDATA[METHOD Setup : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[eStateMachineSourceID := eStateSourceID;

IF eStateMachineSourceID = E_StateSourceID.L_Arm_StepperMotor THEN
	stAxis.bOutwardsForward	:= TRUE;
	stAxis.bOutwardsBackwards	:= FALSE;
	stAxis.bInwardsForward		:= FALSE;
	stAxis.bInwardsBackwards	:= TRUE;
	stAxis.fHomePosition		:= SystemConfig.fLEFT_STEPPER_HOME_POSITION;
ELSE // eStateMachineSourceID = E_StateSourceID.R_Arm_StepperMotor
	stAxis.bOutwardsForward	:= FALSE;
	stAxis.bOutwardsBackwards	:= TRUE;
	stAxis.bInwardsForward		:= TRUE;
	stAxis.bInwardsBackwards	:= FALSE;
	stAxis.fHomePosition		:= SystemConfig.fRIGHT_STEPPER_HOME_POSITION;
END_IF

fbHoming(eStateSourceID := THIS^.eStateMachineSourceID +  E_StepperID_Offset.StepperHoming,
					aErrorLog:=THIS^.aErrorLog,
					nErrorLogIndex:=THIS^.nErrorLogIndex,
					stParentsAxis:=THIS^.stAxis);
					
SetInnerEnumeration(nStateEnum:=THIS^.eInnerState);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Stepper">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.Angle.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.Disable">
      <LineId Id="8" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.ForceHoming.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.ForceHoming.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.Homed.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="6" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.InnerLoopSM">
      <LineId Id="83" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="86" Count="2" />
      <LineId Id="90" Count="5" />
      <LineId Id="164" Count="0" />
      <LineId Id="178" Count="2" />
      <LineId Id="165" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="171" Count="1" />
      <LineId Id="169" Count="0" />
      <LineId Id="173" Count="2" />
      <LineId Id="170" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="162" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="149" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="153" Count="5" />
      <LineId Id="160" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.ReadStatus">
      <LineId Id="5" Count="1" />
    </LineIds>
    <LineIds Name="FB_Stepper.Reset">
      <LineId Id="10" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="FB_Stepper.Setup">
      <LineId Id="30" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="46" Count="11" />
      <LineId Id="45" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="42" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>